--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
 
-    background-color:#48D1CC
+    background-color:#000000
   }
 
 h1{
@@ -10,6 +10,6 @@ text-align: center;
    text-align: center; 
 }
  em strong  {
-color: blue;
+color: black;
 
  }
